<resources>
    <string name="bluetooth_device_connected">设备已连接</string>
    <string name="bluetooth_device_disconnected">设备已断开</string>
    <string name="bluetooth_device_connect_fail">蓝牙连接失败</string>
    <string name="unfind_devices">未搜索到设备</string>
    <string name="health_data">健康数据</string>
    <string name="xml_blood_oxygen">血氧</string>
    <string name="xml_oxygen_saturation">血氧饱和度</string>
    <string name="xml_normal">正常</string>
    <string name="xml_gaoya">高压</string>
    <string name="xml_diya">低压</string>
    <string name="xml_maibo">脉搏</string>
    <string name="xml_gaoxueya">高血压</string>
    <string name="xml_dixueya">低血压</string>
    <string name="xml_xuetang">血糖</string>
    <string name="xml_kongfu">空腹</string>
    <string name="xml_dixuetang">低血糖</string>
    <string name="xml_gaoxuetang">高血糖</string>
    <string name="xml_2_hours">餐后两小时</string>
    <string name="xml_others_hours">随机血糖</string>
    <string name="xml_bosheng">检测设备：博声心电仪</string>
    <string name="xml_device_change">切换</string>
    <string name="next_step">下一步</string>
    <string name="distance_ends">距离测量结束还有：</string>
    <string name="xml_distance_ends">距离测量结束还有：**s</string>
    <string name="xml_tiwen">体温</string>
    <string name="xml_normal_temperature">正常温度</string>
    <string name="xml_niaosuan">尿酸</string>
    <string name="xml_danguchun">胆固醇</string>
    <string name="xml_xuetang_kongfu">血糖(空腹)</string>
    <string name="xml_niaosuan_unit">尿酸(毫摩/升)</string>
    <string name="xml_male">男性</string>
    <string name="xml_female">女性</string>
    <string name="xml_ganguchun_unit">胆固醇(毫摩/升)</string>
    <string name="xml_tizhong">体重</string>
    <string name="xml_tizhi">体质</string>
    <string name="xml_tizhi_zhishu">体质指数（BMI）</string>
    <string name="xml_pianshou">偏瘦</string>
    <string name="xml_pianpang">偏胖</string>
    <string name="bluetooth_control">操作蓝牙需要打开蓝牙权限</string>
    <string name="no_support_bluetooth">蓝牙未打开或者不支持蓝牙</string>
    <string name="not_compatible_with_this_device">未兼容该设备:</string>
    <string name="connect_device_first">请先连接设备</string>
    <string name="connect_device_timeout">设备连接超时</string>
    <string name="device_is_not_full_of_gas">设备充不上气</string>
    <string name="device_detection_error">设备检测发生错误</string>
    <string name="device_insufficient_battery">设备电量不足</string>
    <string name="collect_data_failure">采集数据失败，请先清洁仪器，再次测量。</string>
    <string name="improve_gender_and_age">请先去个人中心完善性别和年龄信息</string>
    <string name="analysis_data_failed">分析数据失败</string>
    <string name="end_of_measurement">测量结束</string>
    <string name="analyzing_data">正在分析数据...</string>
    <string name="abnormal_temperature">测量温度不正常</string>
</resources>

