<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl1"
        android:layout_width="976pt"
        android:layout_height="314pt"
        android:background="@drawable/bluetooth_bg_measure_corner"
        app:layout_constraintBottom_toTopOf="@+id/cl2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <TextView
            android:id="@+id/title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32pt"
            android:text="@string/xml_xuetang_kongfu"
            android:textColor="#333"
            android:textSize="56pt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title1_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28pt"
            android:text="&lt;3.9"
            android:textColor="#FF3030"
            android:textSize="64pt"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/title1_2"
            app:layout_constraintTop_toBottomOf="@id/title1" />

        <TextView
            android:id="@+id/title1_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28pt"
            android:text="3.9~6.1"
            android:textColor="#28DA6B"
            android:textSize="64pt"
            app:layout_constraintLeft_toRightOf="@id/title1_1"
            app:layout_constraintRight_toLeftOf="@+id/title1_3"
            app:layout_constraintTop_toBottomOf="@id/title1" />

        <TextView
            android:id="@+id/title1_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28pt"
            android:text="&gt;6.1"
            android:textColor="#FF3030"
            android:textSize="64pt"
            app:layout_constraintLeft_toRightOf="@id/title1_2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70pt"
            android:layout_marginBottom="32pt"
            android:text="@string/xml_dixuetang"
            android:textColor="#333"
            android:textSize="48pt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32pt"
            android:text="@string/xml_normal"
            android:textColor="#333"
            android:textSize="48pt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/title1_2"
            app:layout_constraintRight_toRightOf="@id/title1_2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="70pt"
            android:layout_marginBottom="32pt"
            android:text="@string/xml_gaoxuetang"
            android:textColor="#333"
            android:textSize="48pt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl2"
        android:layout_width="976pt"
        android:layout_height="314pt"
        android:layout_marginTop="32pt"
        android:background="@drawable/bluetooth_bg_measure_corner"
        app:layout_constraintBottom_toTopOf="@+id/cl3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl1">

        <TextView
            android:id="@+id/title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32pt"
            android:text="@string/xml_niaosuan_unit"
            android:textColor="#333"
            android:textSize="56pt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title2_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="56pt"
            android:layout_marginTop="28pt"
            android:text="≤0.42"
            android:textColor="#FF3030"
            android:textSize="64pt"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/title2_3"
            app:layout_constraintTop_toBottomOf="@id/title2" />


        <TextView
            android:id="@+id/title2_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28pt"
            android:layout_marginRight="56pt"
            android:text="≤0.36"
            android:textColor="#FF3030"
            android:textSize="64pt"
            app:layout_constraintLeft_toRightOf="@id/title2_1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70pt"
            android:layout_marginBottom="32pt"
            android:text="@string/xml_male"
            android:textColor="#333"
            android:textSize="48pt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="70pt"
            android:layout_marginBottom="32pt"
            android:text="@string/xml_female"
            android:textColor="#333"
            android:textSize="48pt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl3"
        android:layout_width="976pt"
        android:layout_height="314pt"
        android:layout_marginTop="32pt"
        android:background="@drawable/bluetooth_bg_measure_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl2">

        <TextView
            android:id="@+id/title3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32pt"
            android:text="@string/xml_ganguchun_unit"
            android:textColor="#333"
            android:textSize="56pt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--<TextView-->
        <!--android:id="@+id/title3_1"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="28pt"-->
        <!--android:text="2.9~6.0"-->
        <!--android:textColor="#FF3030"-->
        <!--android:textSize="64pt"-->
        <!--app:layout_constraintHorizontal_chainStyle="spread_inside"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintRight_toLeftOf="@+id/title3_3"-->
        <!--app:layout_constraintTop_toBottomOf="@id/title3"-->
        <!--android:layout_marginLeft="56pt"/>-->


        <!--<TextView-->
        <!--android:id="@+id/title3_3"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="28pt"-->
        <!--android:text="3.1~5.2"-->
        <!--android:textColor="#FF3030"-->
        <!--android:textSize="64pt"-->
        <!--app:layout_constraintLeft_toRightOf="@id/title3_1"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@id/title3"-->
        <!--android:layout_marginRight="56pt"/>-->

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="32pt"-->
        <!--android:layout_marginLeft="70pt"-->
        <!--android:text="成人"-->
        <!--android:textColor="#333"-->
        <!--android:textSize="48pt"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintLeft_toLeftOf="parent" />-->


        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="32pt"-->
        <!--android:layout_marginRight="70pt"-->
        <!--android:text="儿童"-->
        <!--android:textColor="#333"-->
        <!--android:textSize="48pt"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintRight_toRightOf="parent" />-->
        <TextView
            android:id="@+id/title3_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28pt"
            android:text="&lt;5.2"
            android:textColor="#FF3030"
            android:textSize="64pt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title3" />

    </android.support.constraint.ConstraintLayout>


    <View
        android:layout_width="@dimen/left_white_witdth"
        android:layout_height="match_parent"
        android:background="@color/bluetooth_white" />

    <include
        android:id="@+id/bottom_btn"
        layout="@layout/bluetooth_layout_two_button" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/cl5"
        app:layout_constraintLeft_toLeftOf="@id/bottom_btn"
        app:layout_constraintRight_toRightOf="@id/bottom_btn"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_gaoya"
            android:layout_width="402pt"
            android:layout_height="174pt"
            android:background="@drawable/bluetooth_celiang_shape"
            android:gravity="center"
            android:text="0.00"
            android:textColor="#333"
            android:textSize="120pt"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/tv_title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="48pt"
            android:text="@string/xml_xuetang"
            android:textColor="#333"
            android:textSize="88pt"
            app:layout_constraintBottom_toBottomOf="@id/tv_gaoya"
            app:layout_constraintRight_toLeftOf="@id/tv_gaoya"
            app:layout_constraintTop_toTopOf="@id/tv_gaoya" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(mmol/L)"
            android:textColor="#999"
            android:textSize="40pt"
            app:layout_constraintLeft_toLeftOf="@id/tv_title1"
            app:layout_constraintRight_toRightOf="@id/tv_title1"
            app:layout_constraintTop_toBottomOf="@id/tv_title1" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/cl6"
        app:layout_constraintLeft_toLeftOf="@id/bottom_btn"
        app:layout_constraintRight_toRightOf="@id/bottom_btn"
        app:layout_constraintTop_toBottomOf="@id/cl4">

        <TextView
            android:id="@+id/tv_diya"
            android:layout_width="402pt"
            android:layout_height="174pt"
            android:background="@drawable/bluetooth_celiang_shape"
            android:gravity="center"
            android:text="0.00"
            android:textColor="#333"
            android:textSize="120pt"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/tv_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="48pt"
            android:text="@string/xml_niaosuan"
            android:textColor="#333"
            android:textSize="88pt"
            app:layout_constraintBottom_toBottomOf="@id/tv_diya"
            app:layout_constraintRight_toLeftOf="@id/tv_diya"
            app:layout_constraintTop_toTopOf="@id/tv_diya" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(mmol/L)"
            android:textColor="#999"
            android:textSize="40pt"
            app:layout_constraintLeft_toLeftOf="@id/tv_title2"
            app:layout_constraintRight_toRightOf="@id/tv_title2"
            app:layout_constraintTop_toBottomOf="@id/tv_title2" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/bottom_btn"
        app:layout_constraintLeft_toLeftOf="@id/bottom_btn"
        app:layout_constraintRight_toRightOf="@id/bottom_btn"
        app:layout_constraintTop_toBottomOf="@id/cl5">

        <TextView
            android:id="@+id/tv_maibo"
            android:layout_width="402pt"
            android:layout_height="174pt"
            android:background="@drawable/bluetooth_celiang_shape"
            android:gravity="center"
            android:text="0.00"
            android:textColor="#333"
            android:textSize="120pt"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/tv_title3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="48pt"
            android:text="@string/xml_danguchun"
            android:textColor="#333"
            android:textSize="88pt"
            app:layout_constraintBottom_toBottomOf="@id/tv_maibo"
            app:layout_constraintRight_toLeftOf="@id/tv_maibo"
            app:layout_constraintTop_toTopOf="@id/tv_maibo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(mmol/L)"
            android:textColor="#999"
            android:textSize="40pt"
            app:layout_constraintLeft_toLeftOf="@id/tv_title3"
            app:layout_constraintRight_toRightOf="@id/tv_title3"
            app:layout_constraintTop_toBottomOf="@id/tv_title3" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>