<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#f5f5f5">
    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl1"
        android:layout_width="976pt"
        android:layout_height="314pt"
        android:background="@drawable/bluetooth_bg_measure_corner"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cl2"
        app:layout_constraintVertical_chainStyle="packed"
        >
        <TextView
            android:id="@+id/title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xml_normal"
            android:textColor="#333"
            android:textSize="56pt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32pt"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="64pt"
            android:textColor="#28DA6B"
            android:text="&lt;140mmHg"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title1"
            android:layout_marginLeft="56pt"
            android:layout_marginTop="28pt"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="64pt"
            android:textColor="#28DA6B"
            android:text="&lt;90mmHg"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title1"
            android:layout_marginRight="56pt"
            android:layout_marginTop="28pt"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xml_gaoya"
            android:textColor="#333"
            android:textSize="48pt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="178pt"
            android:layout_marginBottom="32pt"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xml_diya"
            android:textColor="#333"
            android:textSize="48pt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="178pt"
            android:layout_marginBottom="32pt"
            />
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl2"
        android:layout_width="976pt"
        android:layout_height="314pt"
        android:background="@drawable/bluetooth_bg_measure_corner"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl1"
        app:layout_constraintBottom_toTopOf="@+id/cl3"
        android:layout_marginTop="32pt"
        >
        <TextView
            android:id="@+id/title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xml_gaoxueya"
            android:textColor="#333"
            android:textSize="56pt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32pt"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="64pt"
            android:textColor="#FF3030"
            android:text="≥140mmHg"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title2"
            android:layout_marginLeft="56pt"
            android:layout_marginTop="28pt"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="64pt"
            android:textColor="#FF3030"
            android:text="≥90mmHg"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title2"
            android:layout_marginRight="56pt"
            android:layout_marginTop="28pt"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xml_gaoya"
            android:textColor="#333"
            android:textSize="48pt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="178pt"
            android:layout_marginBottom="32pt"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xml_diya"
            android:textColor="#333"
            android:textSize="48pt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="178pt"
            android:layout_marginBottom="32pt"
            />
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl3"
        android:layout_width="976pt"
        android:layout_height="314pt"
        android:background="@drawable/bluetooth_bg_measure_corner"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="32pt"
        >
        <TextView
            android:id="@+id/title3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xml_dixueya"
            android:textColor="#333"
            android:textSize="56pt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32pt"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="64pt"
            android:textColor="#FF3030"
            android:text="&lt;90mmHg"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title3"
            android:layout_marginLeft="56pt"
            android:layout_marginTop="28pt"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="64pt"
            android:textColor="#FF3030"
            android:text="&lt;60mmHg"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title3"
            android:layout_marginRight="56pt"
            android:layout_marginTop="28pt"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xml_gaoya"
            android:textColor="#333"
            android:textSize="48pt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="178pt"
            android:layout_marginBottom="32pt"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xml_diya"
            android:textColor="#333"
            android:textSize="48pt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="178pt"
            android:layout_marginBottom="32pt"
            />
    </android.support.constraint.ConstraintLayout>
    <View
        android:layout_width="@dimen/left_white_witdth"
        android:layout_height="match_parent"
        android:background="@color/bluetooth_white"/>
    <include
        android:id="@+id/bottom_btn"
        layout="@layout/bluetooth_layout_two_button"
        />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cl5"
        app:layout_constraintLeft_toLeftOf="@id/bottom_btn"
        app:layout_constraintRight_toRightOf="@id/bottom_btn">
        <TextView
            android:id="@+id/tv_gaoya"
            android:layout_width="402pt"
            android:layout_height="174pt"
            android:background="@drawable/bluetooth_celiang_shape"
            android:gravity="center"
            android:text="0"
            android:textColor="#333"
            android:textSize="120pt"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"/>
        <TextView
            android:id="@+id/tv_title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xml_gaoya"
            android:textColor="#333"
            android:textSize="88pt"
            app:layout_constraintRight_toLeftOf="@id/tv_gaoya"
            app:layout_constraintTop_toTopOf="@id/tv_gaoya"
            app:layout_constraintBottom_toBottomOf="@id/tv_gaoya"
            android:layout_marginRight="48pt"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40pt"
            android:textColor="#999"
            android:text="(mmHg)"
            app:layout_constraintTop_toBottomOf="@id/tv_title1"
            app:layout_constraintLeft_toLeftOf="@id/tv_title1"
            app:layout_constraintRight_toRightOf="@id/tv_title1"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@id/cl4"
        app:layout_constraintBottom_toTopOf="@+id/cl6"
        app:layout_constraintLeft_toLeftOf="@id/bottom_btn"
        app:layout_constraintRight_toRightOf="@id/bottom_btn">
        <TextView
            android:id="@+id/tv_diya"
            android:layout_width="402pt"
            android:layout_height="174pt"
            android:background="@drawable/bluetooth_celiang_shape"
            android:gravity="center"
            android:text="0"
            android:textColor="#333"
            android:textSize="120pt"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"/>
        <TextView
            android:id="@+id/tv_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xml_diya"
            android:textColor="#333"
            android:textSize="88pt"
            app:layout_constraintRight_toLeftOf="@id/tv_diya"
            app:layout_constraintTop_toTopOf="@id/tv_diya"
            app:layout_constraintBottom_toBottomOf="@id/tv_diya"
            android:layout_marginRight="48pt"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40pt"
            android:textColor="#999"
            android:text="(mmHg)"
            app:layout_constraintTop_toBottomOf="@id/tv_title2"
            app:layout_constraintLeft_toLeftOf="@id/tv_title2"
            app:layout_constraintRight_toRightOf="@id/tv_title2"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cl5"
        app:layout_constraintBottom_toTopOf="@id/bottom_btn"
        app:layout_constraintLeft_toLeftOf="@id/bottom_btn"
        app:layout_constraintRight_toRightOf="@id/bottom_btn">
        <TextView
            android:id="@+id/tv_maibo"
            android:layout_width="402pt"
            android:layout_height="174pt"
            android:background="@drawable/bluetooth_celiang_shape"
            android:gravity="center"
            android:text="0"
            android:textColor="#333"
            android:textSize="120pt"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"/>
        <TextView
            android:id="@+id/tv_title3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xml_maibo"
            android:textColor="#333"
            android:textSize="88pt"
            app:layout_constraintRight_toLeftOf="@id/tv_maibo"
            app:layout_constraintTop_toTopOf="@id/tv_maibo"
            app:layout_constraintBottom_toBottomOf="@id/tv_maibo"
            android:layout_marginRight="48pt"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40pt"
            android:textColor="#999"
            android:text="(bpm)"
            app:layout_constraintTop_toBottomOf="@id/tv_title3"
            app:layout_constraintLeft_toLeftOf="@id/tv_title3"
            app:layout_constraintRight_toRightOf="@id/tv_title3"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>